...
            android:text="Loading your history data..."
            android:textAlignment="center"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/graphUsage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graphText"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@+id/barGraph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backToHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="265dp"
...
