<resources>
    <string name="app_name">Team4-PersonalBest</string>
    <string name="startBtnStr">Start Recording</string>
    <string name="endBtnStr">End Recording</string>
    <string name="heightPrompt">Please Enter Your Height</string>
    <string name="stepPrompt">Please Enter Steps Taken</string>
    <string name="confirm">Done</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="metric_prompt">Select a metric:</string>
    <string-array name="metric">
        <item>cm</item>
        <item>ft</item>
    </string-array>
    <string name="invalidHeight">Invalid height. Please enter again.</string>
    <string name="invalidStep">Steps must be between 0(exclusive) and 10000(inclusive)</string>
    <string name="displaySteps">Steps Taken</string>
    <string name="displayGoal">Current Goal</string>
    <string name="setGoalPrompt">Set a New Step Goal</string>
    <string name="congratsPrompt">Congratulations!</string>
    <string name="newGoalPrompt">Set your new goal!</string>
    <string name="invalidGoal">Please enter a valid goal.</string>
    <string name="re_enter_height">Re-enter Height</string>
    <string name="show_stride_length">Show Stride Length</string>
    <string name="steps_will_be_shown_here">Steps will be shown here</string>
    <string name="update_steps">update steps</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="congrats">You achieved your goal!\nDo you want to set a new goal?</string>
    <string name="suggested">Suggested:</string>
    <string name="customed">Customed:</string>
    <string name="progressLeft">Steps Left</string>
    <string name="prevSession">Active Data</string>
    <string name="user_profile">User Profile</string>
    <string name="choose_stats">Choose Stats</string>
    <string name="chat">Chat</string>
    <string name="stats">Stats</string>
    <string name="OK">OK</string>
    <string name="time_elapsed">time elapsed</string>
    <string name="speed">speed</string>
    <string name="distance">distance</string>
    <string name="graphText">Tap on blue bar: display stats for active sessions of the day.\n\n\t\tTap on red bar: display stats from the rest of the day.</string>
    <string name="launchWeeklyStatsFailure">launchWeeklyStats fail:</string>
    <string name="launchWeeklyStatsSuccess">launchWeeklyStats success</string>
    <string name="launchMonthlyStatsFailure">launchMonthlyStats fail:</string>
    <string name="launchMonthlyStatsSuccess">launchMonthlyStats success</string>
    <string name="PersonalBest">PersonalBest</string>
    <string name="authentication_label">Authentication with Firebase</string>
    <string name="create_room_label">Create room</string>
    <string name="existing_room_label">Enter existing</string>
    <string name="room_dialog_heading">Enter room name</string>
    <string name="dialog_room_info">Name of the room is your token by which you can connect with the person who entered the same room name as your</string>
    <string name="text_submit">Submit</string>
    <string name="success_message_authentication">Authentication is successful</string>
    <string name="chats_heading">Messages</string>
    <string name="hint_room_name">Room name</string>
    <string name="hint_typing">Type here</string>
    <string name="send_text">Send</string>
    <string name="text_waiting_for_auth">Authenticating, this may take 1 minute</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="dismiss">Dismiss</string>
    <string name="user_prefix">Name:</string>
    <string name="delete_friend">Delete Friend</string>
    <string name="delete_friend_prompt">Are you sure to delete your friend</string>
    <string name="show_weekly">Weekly</string>
    <string name="show_monthly">Monthly</string>
    <string name="choose_stats_msg">In which time span would you like to view your stats?</string>
    <string name="show_stats">Show Stats</string>
</resources>
