...
                        android:paddingBottom="2dp"
                        android:text="Re-enter Height"
                        android:textColor="@android:color/holo_blue_bright"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/weeklyButton"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/small_btn_background"
                        android:fontFamily="@font/armata"
                        android:minHeight="40dip"
                        android:paddingTop="2dp"
...
